--- a/css/styles.css
+++ b/css/styles.css
@@ -277,18 +277,31 @@ align-items: center;
 justify-content: center;
 flex-direction: row;
 gap: 24px;
+margin-top: 8px;
 }
 
 .list-icons{
-
+width: 40px;
+height: 40px;
 }
 
 .link-icons{
-
+display: flex;
+width: 100%;
+height: 100%;
+background-color: #4d5ae5;
+border-radius: 50%;
+align-items: center;
+justify-content: center;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .iconssvg{
+    fill: #f4f4fd;;
+}
 
+.link-icons:hover, .link-icons:focus{
+    background-color: #404BBF;
 }
 
 .sect-img{
@@ -391,4 +404,47 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
 .logo-footer {
     display: inline-block;
     margin-bottom: 16px;
+}
+
+.container-footertwo{
+display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 16px;
+    margin-left: 120px;
+    text-align: left;
+}
+
+.icons-footer{
+display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 24px;
+    margin-top: 16px;
+}
+
+.list-icons-footer{
+width: 40px;
+    height: 40px;
+}
+
+.footer-link-icons{
+    display: flex;
+        width: 100%;
+        height: 100%;
+        background-color: #4d5ae5;
+        border-radius: 50%;
+        align-items: center;
+        justify-content: center;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.title-footer{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin: 0 auto;
 }
