--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body{
 }
 
 *::after{
-content: ''
+content: '';
 width: 100%;
 position: absolute;
 left: 0;
@@ -18,7 +18,6 @@ bottom: -1px;
 height: 4px;
 background-color: #404bbf;
 border-radius: 2px;
-
 }
 
 img{
@@ -79,6 +78,7 @@ font-weight: 700;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    position: relative;
 }
 
 .logo-style{
@@ -188,7 +188,7 @@ font-weight: 500;
     display: block;
     border: none;
     border-radius: 4px;
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn:hover, .btn:focus{
@@ -388,6 +388,10 @@ overflow: hidden;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.paragraf-card:hover{
+    transform: translateY(0%);
+}
+
 .img-block{
 
 }
@@ -445,8 +449,10 @@ overflow: hidden;
 .container-footer{
     display: flex;
     align-items: baseline;
-    margin-right: 120px;
+}
 
+.logo-text{
+margin-right: 120px;
 }
 
 .logo-style-footer {
