--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,6 @@ position: absolute;
 left: 0;
 bottom: -1px;
 height: 4px;
-background-color: #404bbf;
 border-radius: 2px;
 }
 
@@ -78,11 +77,15 @@ font-weight: 700;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
-    position: relative;
 }
 
 .logo-style{
 color: #2e2f42;
+
+}
+
+.link-studio{
+
 }
 
 .nav-list{
@@ -94,7 +97,7 @@ color: #2e2f42;
 }
 
 .nav-item{
-position: relative;
+
 }
 
 .nav-item-link{
@@ -105,11 +108,20 @@ position: relative;
     letter-spacing: 0.02em;
 padding: 24px 0;
 color: #2e2f42;
-color: #404bbf;
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
+.nav-item-link-studio{
+    display: block;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        padding: 24px 0;
+        color: #404bbf;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: relative;
+}
 .nav-item-link:hover,
 .nav-item-link:focus{
     color: #404bbf;
@@ -373,7 +385,7 @@ overflow: hidden;
 
 }
 
-.paragraf-card{
+.sect-four-item:hover .card p{
     position: absolute;
     top: 0;
     font-size: 16px;
