--- a/css/styles.css
+++ b/css/styles.css
@@ -8,17 +8,7 @@ body{
 *::after {
     box-sizing: border-box;
 }
-*,
-*::after{
-content: '';
-width: 100%;
-position: absolute;
-left: 0;
-bottom: -1px;
-height: 4px;
-background-color: #404bbf;
-border-radius: 2px;
-}
+
 
 img{
     display: block;
@@ -126,6 +116,17 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .nav-item-link:hover,
 .nav-item-link:focus{
     color: #404bbf;
+}
+
+.nav-item-link-studio::after {
+    content: '';
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
 }
 
 .address-page{
